--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "engines": "v20.11.1",
   "license": "ISC",
   "description": "",
   "dependencies": {
